--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,10 @@ URL: https://github.com/mrc-ide/odin2
 BugReports: https://github.com/mrc-ide/odin2/issues
 Imports:
     cli,
+    dust2,
     rlang
 Suggests:
-    mrc-ide/dust2@mrc-5356,
     testthat (>= 3.0.0)
+Remotes:
+    mrc-ide/dust2@mrc-5356
 Config/testthat/edition: 3
