--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,12 @@ URL: https://github.com/mrc-ide/odin2
 BugReports: https://github.com/mrc-ide/odin2/issues
 Imports:
     cli,
-    dust2,
     rlang
 Suggests:
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Remotes:
     mrc-ide/dust2@mrc-5494
 Config/testthat/edition: 3
