--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,10 @@ Imports:
     dust2,
     rlang
 Suggests:
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Remotes:
     mrc-ide/dust2@mrc-5494
 Config/testthat/edition: 3
+VignetteBuilder: knitr
