--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,6 @@ Suggests:
 Config/testthat/edition: 3
 Remotes:
     mrc-ide/dust2,
-    mrc-ide/mcstate2
+    mrc-ide/mcstate2@mrc-5582
 VignetteBuilder: knitr
 Language: en-GB
