Add integration test

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Suggests:
     knitr,
     rmarkdown,
     mockery,
+    numDeriv,
     testthat (>= 3.0.0),
     withr
 Config/testthat/edition: 3
