--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,6 @@ Suggests:
 Config/testthat/edition: 3
 Remotes:
     mrc-ide/dust2,
-    mrc-ide/mcstate2@mrc-5582
+    mrc-ide/mcstate2
 VignetteBuilder: knitr
 Language: en-GB
