--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ Suggests:
     withr
 Config/testthat/edition: 3
 Remotes:
-    mrc-ide/dust2@mrc-5653,
+    mrc-ide/dust2,
     mrc-ide/mcstate2
 VignetteBuilder: knitr
 Language: en-GB
