--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Suggests:
     rmarkdown,
     mockery,
     numDeriv,
+    pkgload,
     testthat (>= 3.0.0),
     withr
 Config/testthat/edition: 3
