--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Suggests:
     withr
 Config/testthat/edition: 3
 Remotes:
-    mrc-ide/dust2@mrc-5746,
+    mrc-ide/dust2
     mrc-ide/monty
 VignetteBuilder: knitr
 Language: en-GB
