--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ URL: https://mrc-ide.github.io/odin2, https://github.com/mrc-ide/odin2
 BugReports: https://github.com/mrc-ide/odin2/issues
 Imports:
     cli,
-    dust2,
+    dust2 (>= 0.1.5),
     monty,
     rlang
 Suggests:
@@ -28,7 +28,7 @@ Suggests:
     withr
 Config/testthat/edition: 3
 Remotes:
-    mrc-ide/dust2
+    mrc-ide/dust2,
     mrc-ide/monty
 VignetteBuilder: knitr
 Language: en-GB
