Add code migration support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(cnd_footer,odin_parse_error)
 S3method(print,odin_code)
 export(odin)
 export(odin_error_explain)
+export(odin_migrate)
 export(odin_package)
 export(odin_show)
 importFrom(rlang,cnd_footer)
