--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,6 +12,7 @@ reference:
       - odin_error_explain
       - odin_package
       - odin_show
+      - odin_migrate
 
 articles:
   - title: Basics
