--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(odin_error_explain)
 export(odin_migrate)
 export(odin_package)
 export(odin_show)
+export(odin_validate)
 importFrom(rlang,cnd_footer)
