--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -20,6 +20,7 @@ articles:
     navbar: Basics
     contents:
       - fitting
+      - debugging
   - title: Details
     navbar: Details
     contents:
