--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Suggests:
     withr
 Config/testthat/edition: 3
 Remotes:
-    mrc-ide/dust2@mrc-5727,
+    mrc-ide/dust2,
     mrc-ide/monty
 VignetteBuilder: knitr
 Language: en-GB
