--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,12 +17,13 @@ URL: https://mrc-ide.github.io/odin2, https://github.com/mrc-ide/odin2
 BugReports: https://github.com/mrc-ide/odin2/issues
 Imports:
     cli,
-    dust2 (>= 0.3.7),
+    dust2 (>= 0.3.9),
     glue,
     monty (>= 0.3.11),
     rlang
 Suggests:
     decor,
+    deSolve,
     fs,
     knitr,
     rmarkdown,
